--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.calistenia_app">
+
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+<uses-permission android:name="android.permission.ACCESS_CARSE_LOCATION"/>
+
+
    <application
         android:label="calistenia_app"
         android:icon="@mipmap/ic_launcher">
@@ -18,11 +23,6 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
-              
- <meta-data android:name="com.google.android.maps.v2.API_KEY"
-               android:value="AIzaSyBPGJ7b_5BY-sggBf5aXtqfOcpbb9igLqs"/>
-
-
             <!-- Displays an Android View that continues showing the launch screen
                  Drawable until Flutter paints its first frame, then this splash
                  screen fades out. A splash screen is useful to avoid any visual
@@ -42,5 +42,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+             android:name="com.google.android.geo.API_KEY"
+             android:value="AIzaSyDhN3hoilX-BQbmtoXtaDwgV01UQSN0-F4"/>
     </application>
 </manifest>
