--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,21 @@ dependencies:
 
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
+  google_maps_flutter: ^2.0.6
+  dio: ^4.0.0
+  flutter_polyline_points: ^1.0.0
+  location: ^4.3.0
+  font_awesome: ^5.10.1
+  shimmer: ^2.0.0
+  get: ^4.3.8
+  get_storage: ^2.0.3
+  cached_network_image: ^3.1.0
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -33,9 +45,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-    #"" - images/fondo_login.gif
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
