--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   animated_bottom_navigation_bar: ^0.3.2
   path_provider: ^2.0.5
   xfile: ^1.1.0
+  shared_preferences: ^2.0.8
+  intl: ^0.17.0
+  json_serializable: ^6.0.1
 
 dev_dependencies:
   flutter_test:
