--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>to take user profile image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>to choose user profile image</string>
+
 </dict>
 </plist>
