--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,25 +18,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-  google_maps_flutter: ^2.0.6
   dio: ^4.0.0
-  flutter_polyline_points: ^1.0.0
   location: ^4.3.0
   font_awesome: ^5.10.1
   shimmer: ^2.0.0
   get: ^4.3.8
   get_storage: ^2.0.3
   cached_network_image: ^3.1.0
-  carousel_slider: ^4.0.0
-  sliding_card: ^0.1.2
   image_picker: ^0.8.4+1
   avatar_view: ^1.0.1
-  animated_bottom_navigation_bar: ^0.3.2
   path_provider: ^2.0.5
   xfile: ^1.1.0
   shared_preferences: ^2.0.8
   intl: ^0.17.0
   json_serializable: ^6.0.1
+  flutter_map: ^0.14.0
+  latlng: ^0.1.0
+  flutter_emoji: ^2.2.1+1
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
