--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   json_serializable: ^6.0.1
   flutter_map: ^0.14.0
   latlng: ^0.1.0
-  flutter_emoji: ^2.2.1+1
-  youtube_player_flutter: ^8.0.0
+  url_launcher: ^6.0.13
+
 
 dev_dependencies:
   flutter_test:
