--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31 // esto era 30 antes
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -36,7 +36,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.calistenia_app"
         minSdkVersion 20
-        targetSdkVersion 30
+        targetSdkVersion 31 // esto era 30 antes
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
