--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_map: ^0.14.0
   latlng: ^0.1.0
   url_launcher: ^6.0.13
+  geolocator: ^7.7.1
+  geolocator_web: ^2.0.6
+
 
 
 dev_dependencies:
