--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.calistenia_app"
-        minSdkVersion 20
+        minSdkVersion 23// esto era 20 antes
         targetSdkVersion 31 // esto era 30 antes
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
