--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,6 @@ dependencies:
   get: ^4.3.8
   get_storage: ^2.0.3
   cached_network_image: ^3.1.0
-  image_picker: ^0.8.4+1
-  avatar_view: ^1.0.1
   path_provider: ^2.0.5
   xfile: ^1.1.0
   shared_preferences: ^2.0.8
@@ -36,7 +34,10 @@ dependencies:
   latlng: ^0.1.0
   url_launcher: ^6.0.13
   geolocator: ^7.7.1
-  geolocator_web: ^2.0.6
+  linkwell: ^2.0.6
+  provider: ^6.0.1
+  flutter_map_location_marker: ^1.0.0
+
 
 
 
