--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   linkwell: ^2.0.6
   provider: ^6.0.1
   flutter_map_location_marker: ^1.0.0
+  google_maps_flutter: ^2.1.1
+  font_awesome_flutter: ^9.2.0
 
 
 
