--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
 
    <application
         android:label="calistenia_app"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+           android:networkSecurityConfig="@xml/network_security_config">>
+
+
+        
 
         <activity
             android:name=".MainActivity"
@@ -59,6 +63,9 @@
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
               />
+  <meta-data android:name="io.flutter.network-policy"
+             android:resource="@xml/network_security_config"/>
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
