--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,13 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
+lintOptions {
+    checkReleaseBuilds false
+    // Or, if you prefer, you can continue to check for errors in release builds,
+    // but continue the build even when errors are found:
+    abortOnError false
+}
+
 
     buildTypes {
         release {
