--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,11 +33,7 @@
 
    <application
         android:label="calistenia_app"
-        android:icon="@mipmap/ic_launcher"
-           android:networkSecurityConfig="@xml/network_security_config">>
-
-
-        
+        android:icon="@mipmap/ic_launcher">
 
         <activity
             android:name=".MainActivity"
@@ -63,9 +59,6 @@
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
               />
-  <meta-data android:name="io.flutter.network-policy"
-             android:resource="@xml/network_security_config"/>
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
