--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
 
    <application
-        android:label="calistenia_app"
+        android:label="Calistenia APP"
         android:icon="@mipmap/ic_launcher">
 
         <activity
